# Generative-AI

./: README.md  pyproject.toml  requirements.txt
1-LangchainBasics/: chatbot.py  tools.ipynb
Langchain/: langcahinbasic.ipynb
